@@ -34,6 +34,7 @@ dillo-2.1
  - Implemented the "overline" text-decoration.
  - Enhanced and cleaned up text decorations for SUB and SUP.
  - Added "View Stylesheets" to the page menu.
+ - Remove standard_widget_colors dillorc option.
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
